<resources>
    <string name="app_name">DoorDine</string>
    <string name="preference_file_name">DoorDine Preferences</string>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_of_application">FLOWCHART</string>
    <string name="a1">You can\'t login to multiple accounts at the same time in the same instance of the app.</string>
    <string name="q1">Can I login to two accounts at the same time?</string>
    <string name="q2">Can I order from two different restaurants in the same order?</string>
    <string name="a2">No. If you try to do so your previous selections will become deselected automatically. Don\'t worry, before the deselecting process happens, you will be notified i.e. cross questioned if you are sure. If you would like to order from multiple restaurants you must do that sequentially.</string>
    <string name="q3">If a user logs into their account on a device and selects some restaurants as favorite and a few hours later another user logs into their account on the same device will the actions done by the first user be reflected in second users favorites page?</string>
    <string name="a3">No. I did this by making a composite primary key in the Restaurant Entity table by including the user_id as one of the primary keys along with the restaurant_id.)</string>
    <string name="q4">How long will my order take to reach my house</string>
    <string name="a4">We only display those restaurants which are in a radius of 30 minutes (by vehicle) to you. If you don\'t receive your meal within 30 minutes you will be given the food for free and you can also file a complaint on doordine@gmail.com</string>
    <string name="q5">Can I order the same dish more that once into the cart?</string>
    <string name="a5">No.  Any item should be added to the cart only once. You can order other dishes along with the dish you ordered (given the other dishes are from the same restaurant), but not the same dish twice at one go.</string>
    <string name="q6">How do I pay for my order?</string>
    <string name="a6">You can pay either online or offline, but due to the novel coronavirus outbreak we recommend you to pay online. At this time hygiene is our top priority. Don\'t forget to wash your hands before you eat!</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="default_price">Rs. 299</string>
    <string name="default_rating">4.5</string>
    <string name="place_order">Place order</string>
    <string name="delivery_executive_will_be_allocated_shortly">Delivery executive will be allocated shortly ...</string>
    <string name="next">NEXT</string>
    <string name="we_can_help_by_sending_you_an_email_with_an_otp_so_that_you_can_reset_your_password_this_otp_must_not_be_shared_with_anyone">We can help by sending you an email with an OTP so that you can reset your password. This OTP must not be shared with anyone.</string>
    <string name="login">LOGIN</string>
    <string name="phone_number">Phone number</string>
    <string name="Continue">continue</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_to_doordine_register_here">New to DoorDine? REGISTER HERE</string>
    <string name="signing_in">Signing in...</string>
    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed</string>
    <string name="ok">OK</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="otp_4_digits">OTP: 4 digits</string>
    <string name="new_password">New password</string>
    <string name="delivery_address">DELIVERY ADDRESS</string>
    <string name="default_add">Landmark\nBuilding No./name and Street Name \nArea\nCity - POSTAL CODE\nCountry</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create Account</string>
    <string name="reset_password">reset password</string>
    <string name="reset">Check your inbox for the OTP and reset your password below.</string>
    <string name="cart_is_empty">Cart is Empty</string>
    <string name="fetching_menu_for_you">Fetching menu for you ...</string>
    <string name="header">HEADER</string>
    <string name="fetching_restaurants_for_you">Fetching restaurants for you ...</string>
    <string name="you_have_no_restaurants_marked_as_favorite">You have no restaurants marked as favorite.</string>
    <string name="fetching_your_favorite_restaurants">Fetching your favorite restaurants ...</string>
    <string name="default_name">Anoop Babu</string>
    <string name="default_no">+91 807 811 0248</string>
    <string name="default_email">babu.anoop99@gmail.com</string>
    <string name="address">ADDRESS</string>
    <string name="default_address">Default address</string>
    <string name="fetching_food_you_ate">Fetching food you ate ...</string>
    <string name="your_previous_orders">Your previous orders</string>
    <string name="no_orders_placed">No orders placed</string>
    <string name="chicken_65">Chicken 65</string>
    <string name="rs_290">Rs.290</string>
    <string name="def_rest">def rest</string>
    <string name="_29_05_2033">29/05/2033</string>
    <string name="name_of_item">Name of item</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="_1">1</string>
    <string name="rs_299">Rs. 299</string>
    <string name="cost_low_to_high">Cost(Low to High)</string>
    <string name="cost_high_to_low">Cost(High to Low)</string>
    <string name="rating">Rating</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favorite_restaurants">Favorite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log out</string>
    <string name="sort">sort</string>
</resources>
