<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegistrationActivity"
    android:background="@drawable/background_color">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@id/toolbar"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/name"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawableStart="@drawable/ic_person_black_24dp"/>

    <EditText
        android:id="@+id/etPhoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@id/etName"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:hint="@string/phone_number"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_phone_black_24dp"
        android:drawableStart="@drawable/ic_phone_black_24dp"/>

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@id/etPhoneNo"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:hint="@string/email_address"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawableStart="@drawable/ic_email_black_24dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtAddress"
        android:text="@string/delivery_address"
        android:layout_below="@id/etEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="#000000"/>

    <EditText
        android:id="@+id/etAddress"
        android:layout_marginTop="10dp"
        android:padding="6dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:inputType="textMultiLine"
        android:lines="5"
        android:gravity="top|start"
        android:maxLines="4"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:layout_below="@+id/txtAddress"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_add_location_black_24dp"
        android:drawableStart="@drawable/ic_add_location_black_24dp"
        android:hint="@string/default_add"
    />
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@id/etAddress"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:maxLength="6"
        android:hint="@string/password"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_lock_black_18dp"
        android:drawableStart="@drawable/ic_lock_black_18dp"/>

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@id/etPassword"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:maxLength="6"
        android:hint="@string/confirm_password"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_lock_black_18dp"
        android:drawableStart="@drawable/ic_lock_black_18dp"/>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@id/etConfirmPassword"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"/>

</RelativeLayout>