<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:id="@+id/card"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="6dp"
    app:cardCornerRadius="4dp"
    app:cardBackgroundColor="#ffffff">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/llContent"
        android:orientation="horizontal"
        android:weightSum="6">
        <TextView
            android:id="@+id/txtItemNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/_1"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4.0">
            <TextView
                android:id="@+id/txtItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_of_item"
                android:padding="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:padding="8dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_below="@+id/txtItemName"
                android:textColor="#388e3c"
                android:layout_marginTop="20dp"
                />
        </RelativeLayout>

        <Button
            android:id="@+id/btnAddToCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_marginTop="50dp"
            android:text="@string/add_to_cart"
            android:background="@color/colorPrimary"
            android:textColor="#ffffff"
            android:layout_marginRight="10dp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>