<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragment.AboutAppFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dip"
                android:background="#00000000"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txtFAQ1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="@string/q1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/txtFAQA1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="5dp"
                    android:textColor="#000000"
                    android:text="@string/a1"
                    android:textSize="16sp" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#909090"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dip"
                android:background="#00000000"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txtFAQ2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="@string/q2"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/txtFAQA2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="5dp"
                    android:textColor="#000000"
                    android:text="@string/a2"
                    android:textSize="16sp" />


            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#909090"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dip"
                android:background="#00000000"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txtFAQ3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="@string/q3"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/txtFAQA3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="5dp"
                    android:textColor="#000000"
                    android:text="@string/a3"
                    android:textSize="16sp" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#909090"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dip"
                android:background="#00000000"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txtFAQ4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="@string/q4"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/txtFAQA4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="5dp"
                    android:textColor="#000000"
                    android:text="@string/a4"
                    android:textSize="16sp" />


            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#909090"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="#00000000"
                android:orientation="vertical"
                android:layout_marginBottom="30dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txtFAQ5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="@string/q5"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/txtFAQA5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="5dp"
                    android:textColor="#000000"
                    android:text="@string/a5"
                    android:textSize="16sp" />


            </LinearLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#909090"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="#00000000"
                android:orientation="vertical"
                android:layout_marginBottom="30dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txtFAQ6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="@string/q6"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/txtFAQA6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="5dp"
                    android:textColor="#000000"
                    android:text="@string/a6"
                    android:textSize="16sp" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#909090"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#909090"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:src="@drawable/door23"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/doordine"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#909090"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/map_of_application"
                android:textSize="35sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:src="@drawable/final_project_flow_chart"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>